# infi-erp

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  configuration.yml  docker-compose.yml  enter-db.sh  mock_client_orders.xml  mock_dataset.xml
.cargo/: config.toml
.sqlx/: query-00ffb60e4de2ed415abd2b82230fc3daca5e1c345f66a541425f61bb6b389567.json  query-01bfc85cadf1d4f435adc819ea22843f10bcf2478f71d295d27c483ae5cbc92a.json  query-046abdd07bfae47f509c3fd4074a0c550c4c96c8496daf76048c8159017cee1e.json  query-0539692de9a19a104e9612207f876aa53b124e5f5cc12b8aea78153ba0ea4c68.json  query-070290a2c348195bf3a04582b93301dbe7cc4dfb980be968022048974e50894e.json  query-07358d241a717d50353d61ef0fec6d3ed58acd153b16ba945153cf8176b0d68f.json  query-08f2e4f17a552ff708457691c7c323e2e5a345a5248ce1c8ee1031306f050023.json  query-0e8d869fa387d0b7b4face618fd35f8c41a671bd5499d79efd24e99fdefc3fd5.json  query-0fc0dfa0f7d97674e5627c77eef2b38e1290139795b85954d27cfe58ca874edc.json  query-101d53a4b0c8a3cbc82459789b6ae32fef6d48dd082a52e9443fecb96db7a004.json  query-165f26ea2f3a7964d6bfd3e0168be0c668306ad8ed84cca8d64e8b2ae8542358.json  query-1cd7318a26a45b9431c4e3d61815c24be34c376a0b15ed1cd59dd3031a0b4cce.json  query-1d60e3018eabd870c8a76b9b43ab3472b9e2b398d67f3a7478eba83be439807d.json  query-2163069218253d1c0626e391151ecd3f06e9ae68dd00d3b828b42594d2a479d5.json  query-231bacac0cb3c50440473276a109392d9cf4ca002e6aa68fb251e71b1f751952.json  query-23b2fb00b463bc541ba23590900bc36db29a8a806116b2b8fc3f8889c29a27f8.json  query-2dae51ad42ebf84cdeb7d372d7b408ca02a3cf78f017e367953da482d0e7bd58.json  query-2de978768ada5a8faf344845a628ee65adc43f25d0d8c37dc4345e1b2325f629.json  query-2e192c80186eb0453f83376ce096d109a3f19c392856631fa0092eb9ea17f224.json  query-2f9f61aa603b233cd31028daaaa3ec32bdda7335cb980694e376d253ac3a3c37.json  query-325cf3ae5d728cb97e4bcf77f19213212ea58ba58c6103776cb6aaa0d6f06873.json  query-34b47070336b598bf1f1f0e43b9a9db1280c08c6547ee8b5cc4ed7baed58fe23.json  query-3772df638548e40b36e639c895304250a72beb399757f46e4cbf33e6d279bc33.json  query-3779b8bf5a2b34d3bfc88d05d2d98f1e494407c25c22499071d43b602c3f39df.json  (+56 more)
docker/: chroot-db.sh  create-db.sh  (+1 more)
(+98 files in other folders)
