[package]
name = "infi-erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
anyhow = "1.0"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
] }

serde = { version = "1.0", features = ["derive"] }

axum = "0.7.4"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["normalize-path", "trace"] }

dotenv = "0.15"
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
nom = "7.1.3"
rusty-money = "0.4.1"
subenum = "1.1.1"
