[package]
name = "infi-erp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "infi-erp"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"

sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
  "macros",
  "uuid",
] }

serde = { version = "1.0", features = ["derive"] }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
nom = "7.1.3"
subenum = "1.1.1"
config = "0.14.0"

[dev-dependencies]
rstest = "0.18.2"
