[package]
name = "infi-erp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "infi-erp"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
once_cell = "1.19.0"

uuid = { version = "1.7.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
  "macros",
  "uuid",
] }

serde = { version = "1.0", features = ["derive"] }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
nom = "7.1.3"
subenum = "1.1.1"
config = "0.14.0"

actix-web = "4.5"
enum-iterator = "2.0.0"

[dev-dependencies]
rstest = "0.19.0"
